Upload About and more

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,8 +2,8 @@
 
 Bouke Hoogenboom:
   name        : "Bouke Hoogenboom"
-  bio         : "Run Lift Code"
-  avatar      : "/assets/images/bio-photo-2.jpg"
+  bio         : "Run. Lift. Code."
+  avatar      : "/assets/images/bio-photo-1.jpg"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
