--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   # - title: "Quick-Start Guide"
   #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "About"
-    url: https://bhoogenboom.github.io/about/
+    url: https://cloudrebel.nl/about/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
