--- a/_config.yml
+++ b/_config.yml
@@ -95,51 +95,45 @@ analytics:
 # Site Author
 author:
   name             : "Bouke Hoogenboom"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/bio-photo-1.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Run. Lift. Code."
   location         : "The Netherlands"
   email            : "BHoogenboom@outlook.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: "mailto:bhoogenboom@outlook.com"
+      url: "mailto:bhoogenboom@outlook.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      # url: "https://CloudRebel.nl"
+      url: "https://CloudRebel.nl"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/BoukeHoogenboom"
+      url: "https://twitter.com/BoukeHoogenboom"
     - label: "LinkedIn"
       icon: "fab fa-linkedin"
-      # url: "https://www.linkedin.com/in/bouke-hoogenboom-823a5272/"
+      url: "https://www.linkedin.com/in/bouke-hoogenboom-823a5272/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url: "https://github.com/bhoogenboom"
+      url: "https://github.com/bhoogenboom"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      # url: "https://www.instagram.com/run.lift.code/"
+      url: "https://www.instagram.com/run.lift.code/"
 
 # Site Footer
 footer:
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      # url:
+      url: "https://twitter.com/BoukeHoogenboom"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin-square"
-      # url:
+      url: "https://www.linkedin.com/in/bouke-hoogenboom-823a5272/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url:
-    - label: "GitLab"
-      icon: "fab fa-fw fa-gitlab"
-      # url:
-    - label: "Bitbucket"
-      icon: "fab fa-fw fa-bitbucket"
-      # url:
+      url: "https://github.com/bhoogenboom"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      # url:
+      url: "https://www.instagram.com/run.lift.code/"
 
 
 # Reading Files
