--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ author:
   avatar           : "/assets/images/bio-photo-1.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Run. Lift. Code."
   location         : "The Netherlands"
-  email            : "BHoogenboom@outlook.com"
+  # email          : "BHoogenboom@outlook.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
@@ -109,7 +109,7 @@ author:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/BoukeHoogenboom"
-    - label: "LinkedIn"
+    - label: " LinkedIn"
       icon: "fab fa-linkedin"
       url: "https://www.linkedin.com/in/bouke-hoogenboom-823a5272/"
     - label: "GitHub"
