Adjusted _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ author:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/BoukeHoogenboom"
-    - label: " LinkedIn"
+    - label: "LinkedIn"
       icon: "fab fa-linkedin"
       url: "https://www.linkedin.com/in/bouke-hoogenboom-823a5272/"
     - label: "GitHub"
@@ -126,7 +126,7 @@ footer:
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/BoukeHoogenboom"
     - label: "LinkedIn"
-      icon: "fa fa-linkedin-square"
+      icon: "fab fa-linkedin-square"
       url: "https://www.linkedin.com/in/bouke-hoogenboom-823a5272/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
