--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ author:
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/BoukeHoogenboom"
     - label: "LinkedIn"
-      icon: "fab fa-linkedin"
+      icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/bouke-hoogenboom-823a5272/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
