changed LinkedIn icon in footer

--- a/_config.yml
+++ b/_config.yml
@@ -126,7 +126,7 @@ footer:
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/BoukeHoogenboom"
     - label: "LinkedIn"
-      icon: "fab fa-fw fa-linkedin-square"
+      icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/bouke-hoogenboom-823a5272/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
