Added Navigation Run-Lift-Code

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,12 @@ main:
   #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "About"
     url: /about/
+  - title: "Run"
+    url: /run/
+  - title: "Lift"
+    url: /lift/
+  - title: "Code"
+    url: /Code/  
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
