--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Cloud Rebel - Blog"
-title_separator          : "-"
+title                    : "Cloud Rebel"
+title_separator          : "#"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Bouke Hoogenboom"
 description              : "Run. Lift. Code."
