--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ atom_feed:
   path                   : # blank (default) uses feed.xml
   hide                   : "true" # true, false (default)
 search                   : "true" # true, false (default)
-search_full_content      : # true, false (default)
+search_full_content      : "true" # true, false (default)
 search_provider          : # lunr (default), algolia, google
 algolia:
   application_id         : # YOUR_APPLICATION_ID
@@ -139,7 +139,7 @@ footer:
 # Reading Files
 include:
   - .htaccess
-  - "_pages"
+  - _pages
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
