--- a/_config.yml
+++ b/_config.yml
@@ -139,7 +139,7 @@ footer:
 # Reading Files
 include:
   - .htaccess
-  - ["_pages/run.md"]
+  - ["_pages"]
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
