--- a/_config.yml
+++ b/_config.yml
@@ -279,6 +279,8 @@ defaults:
       path: ""
       type: pages
     values:
-      layout: single
+      layout: splash
       author_profile: true
-
+      header:
+        overlay_color: "#000"
+        overlay_filter: "0.5"
