Added Code. page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
   - title: "Lift."
     url: /lift/
   - title: "Code."
-    url: /
+    url: /code/
   # - title: "About"
   #   url: /about/
   # - title: "Sample Posts"
