Added Code. page

--- a/_config.yml
+++ b/_config.yml
@@ -280,7 +280,7 @@ defaults:
       type: pages
     values:
       layout: splash
-      author_profile: true
+      author_profile: false
       header:
         overlay_color: "#000"
         overlay_filter: "0.5"
