Changed Page Style

--- a/_config.yml
+++ b/_config.yml
@@ -280,6 +280,7 @@ defaults:
       type: pages
     values:
       layout: splash
+      classes: wide
       author_profile: false
       header:
         overlay_color: "#000"
