Added Strava to Author profile

--- a/_config.yml
+++ b/_config.yml
@@ -118,6 +118,9 @@ author:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://www.instagram.com/run.lift.code/"
+    - label: "Strava"
+      icon: "fab fa-fw fa-strava"
+      url: "https://www.strava.com/athletes/7759071"
 
 # Site Footer
 footer:
